--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,7 @@ md-whiteframe {
 }
 
 #crowdsaleApp md-content {
-  background-color: transparent !important; 
+  background-color: rgba(250, 250, 250, 0.85) !important; 
 }
   
 #crowdsaleApp md-content md-tabs {
